navbar bug on iphone 5 se fixed by adding media query to searchform size in searchform css

--- a/src/SearchForm.css
+++ b/src/SearchForm.css
@@ -9,3 +9,8 @@
     width: 20vw;
   }
 }
+@media screen and (max-width: 320px) {
+  .searchForm {
+    width: 43vw;
+  }
+}
